--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,16 +10,16 @@ spring.application.name=mak-api
 
 #Local Logging Setup
 
-logging.level.org.mak=DEBUG
-logging.level.org.apache.http=DEBUG
-logging.path=/home/rohitwadhwa/mak-api
-logging.config=/opt/conf/spring-logback.xml
-logging.file=${logging.path}/log/${spring.application.name}.log
+#logging.level.org.mak=DEBUG
+#logging.level.org.apache.http=DEBUG
+#logging.path=/home/rohitwadhwa/mak-api
+#logging.config=/opt/conf/spring-logback.xml
+#logging.file=${logging.path}/log/${spring.application.name}.log
 
 
 #DB setup
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/mak_user
 spring.datasource.username=root
 spring.datasource.password=root
